tests/ui/borrowck/async-trait-proposes-let-binding.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/async-trait-proposes-let-binding.rs:10:41
   |
LL |         let p = std::convert::identity(&("".to_string()));
   |                                         ^^^^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |                                         |
   |                                         creates a temporary value which is freed while still in use
LL |
LL |         let _q = p;
   |                  - borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
